# homeharbor

./: .gitignore  README.md  aliases.txt  aliases.zsh  dev.sh  package-lock.json  package.json  setup-dev.md  setup.sh  tree.txt
backend/: alembic.ini  notes.txt  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 022503cf4bfa_added_document_pages.py  6c72a6fd09d0_migrazione_iniziale_definitiva.py  988165db91cc_added_pending_scan.py  a5474bec152c_init_schema_paperless.py  f957f1cc8a70_init.py
backend/app/: api.py  config.py  database.py  functions.py  logger.py  main.py
backend/app/paperless/: api.py  models.py
backend/app/paperless/CRUD/: category.py  document.py  utility.py
backend/app/paperless/manage_database/: __main__.py  constants.py  core.py  tree.py  utils.py
backend/app/paperless/routers/: __init__.py  category.py  document.py  document_type.py  form.py  functions.py  path.py  pending_scan.py  utility.py  year.py
backend/app/paperless/schema/: base.py  creation.py  form.py  response.py
backend/app/scansione_documenti/: models.py
backend/app/scansione_documenti/manage_database/: __main__.py  constants.py  core.py  tree.py  utils.py
backend/app/tests/: test_database.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/scanner/: setup.py
backend/scanner/scanner_control/: applescript.py  automation.py  main.py  vision.py
backend/scanner_control/: automation.py  vision.py
backend/test/: scan_test.py
database/: init.sql
electron/: constants.js  ipc.js  main.js  (+2 more)
(+49 files in other folders)
