[project]
name = "backend"
version = "1.0.0"
description = "Backend di HomeHarbor - FastAPI + database + automazioni scanner"
authors = [
  { name = "Valerio", email = "valerio@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
  "fastapi",
  "uvicorn",
  "sqlalchemy",
  "alembic",
  "pydantic",
  "psycopg2",
  "pyautogui",
  "opencv-python",
  "numpy"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "isort",
  "mypy"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "scanner"]